<?xml version="1.0"?>
<package format="3">
  <name>cmd_vel_to_motors</name>
  <version>0.1.0</version>
  <description>Forklift cmd_vel to steering and drive motor command converter.</description>
  <maintainer email="codex@example.com">Codex</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
