<?xml version="1.0"?>
<package format="3">
  <name>collision_monitor</name>
  <version>0.1.0</version>
  <description>Configured collision monitor assets and scan preprocessing nodes.</description>
  <maintainer email="codex@example.com">Codex</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>nav2_collision_monitor</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
