<?xml version="1.0"?>
<package format="3">
  <name>forklift_demo_control</name>
  <version>0.1.0</version>
  <description>Control nodes for the forklift route-server navigation stack.</description>
  <maintainer email="codex@example.com">Codex</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>action_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclpy</depend>
  <depend>ros2_templates</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
