<?xml version="1.0"?>
<package format="3">
  <name>forklift_demo_description</name>
  <version>0.1.0</version>
  <description>Forklift demo description, Gazebo assets, launch files, and Nav2 / SLAM configuration.</description>
  <maintainer email="codex@example.com">Codex</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>forklift_demo_control</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>nav2_collision_monitor</depend>
  <depend>nav2_controller</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>nav2_lifecycle_manager</depend>
  <depend>nav2_msgs</depend>
  <depend>nav2_regulated_pure_pursuit_controller</depend>
  <depend>robot_state_publisher</depend>
  <depend>ros_gz_bridge</depend>
  <depend>ros_gz_sim</depend>
  <depend>rviz2</depend>
  <depend>slam_toolbox</depend>
  <depend>tf2_ros</depend>
  <depend>xacro</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
