<?xml version="1.0"?>
<package format="3">
  <name>paette_docking_no_camera</name>
  <version>0.1.0</version>
  <description>Nav2-driven pallet docking from AprilTag TF without direct camera control.</description>
  <maintainer email="codex@example.com">Codex</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>action_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>
  <depend>forklift_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
