<?xml version="1.0"?>
<package format="3">
  <name>palette_docking</name>
  <version>0.1.0</version>
  <description>Step-based pallet docking controller driven by AprilTag TF.</description>
  <maintainer email="codex@example.com">Codex</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>forklift_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
