<?xml version="1.0"?>
<package format="3">
  <name>vda5050_3_driver</name>
  <version>0.1.0</version>
  <description>VDA5050 v3 protocol adapter boundary for robot_control_core.</description>
  <maintainer email="codex@example.com">Codex</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>forklift_interfaces</exec_depend>
  <exec_depend>mqtt_client</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
